# suspider

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
superspider/: crawler.py  downloader.py  pipline.py  urls.py
