[tool.poetry]
name = "suspider"
version = "0.1.0"
description = ""
authors = ["seaung <seaung.c0m7de@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
bs4 = "^0.0.1"
PyQt5 = "^5.15.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
